--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,3 +10,37 @@
 --restante:'PT Sans', sans-serif;
 
 }
+
+*{
+
+font-family: var(--titulo);
+padding:  0px;
+margin:  0px;
+box-sizing: border-box;
+
+}
+
+body,html{
+
+background-color: rgba(255, 140, 0, 0.671);
+height: 100vh;
+width: 100vw;
+}
+main {
+
+height: 100vh;
+width: 100vw;
+position: relative;
+}
+
+#login {
+
+background-color: white;
+width:  200px;
+height: 500px;
+border-radius: 20px;
+
+}
+
+
+
