--- a/estilos/style.css
+++ b/estilos/style.css
@@ -22,7 +22,8 @@ box-sizing: border-box;
 
 body,html{
 
-background-color: rgba(255, 140, 0, 0.671);
+
+background-image: linear-gradient(to right,#F16529, #000000da);
 height: 100vh;
 width: 100vw;
 }
@@ -35,10 +36,37 @@ position: relative;
 
 #login {
 
+
+position: absolute;
 background-color: white;
-width:  200px;
+width:  250px;
 height: 500px;
 border-radius: 20px;
+top: 50%;
+left: 50%;
+transform: translate(-50% ,-50%);
+overflow: hidden;
+box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
+
+}
+
+
+#login> #imagem{
+
+    background: #F16529 url(../imagens/login.png);
+    background-size: cover;
+    height: 200px;
+    background-repeat: no-repeat;
+    display: block;
+
+}
+
+#formulario{
+    
+display: block;
+ padding: 12px;
+
+
 
 }
 
