--- a/estilos/style.css
+++ b/estilos/style.css
@@ -68,10 +68,14 @@ transition-timing-function: ease;
 
 display: block;
  padding: 12px;
-
-
-
+font-family: var(--restante);
+font-size: 1.3;
 }
 
+h1{
 
+text-align: center;
+color: #F16529;
+font-family: var(--titulo);
 
+}
